@@ -2,7 +2,7 @@ Source: unscd
 Section: admin
 Priority: extra
 Standards-Version: 3.9.3
-Build-Depends: debhelper (>= 9), groff-base
+Build-Depends: debhelper (>= 9), groff-base, help2man
 Maintainer: Don Armstrong <don@debian.org>
 Vcs-Browser: http://git.donarmstrong.com/unscd.git
 Vcs-Git: git://git.donarmstrong.com/unscd.git
