@@ -1,0 +1,3 @@
+[authors]
+.B unscd
+was written primarily by Denys Vlasenko.
