@@ -1,0 +1,2 @@
+debian/unscd.man
+debian/nscd.man
